--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@lottiefiles/dotlottie-web": "^0.40.1",
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
