--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@lottiefiles/dotlottie-web": "^0.40.1",
+    "@splidejs/react-splide": "^0.7.12",
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "react": "^19.0.0",
